# paku-digest

./: .env.example  .gitignore  Makefile  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt  requirements-ocr.txt  requirements.txt
paku_digest/: cli.py  config.py  context.py  logging_utils.py  models.py
paku_digest/ocr/: __init__.py  base.py  chandra_api.py  paddle.py  router.py  stub.py
paku_digest/pipelines/: benchmark_pipeline.py  compare_pipeline.py  digest_pipeline.py  export_pipeline.py
samples/: README.md
tests/: test_engines.py
